# HiBao_Pro

./: README.md
PC/: history.txt  main.py
Pegasus/: BUILD.gn
Pegasus/21_tcpclient/: BUILD.gn  demo_entry_cmsis.c  net_params.h
Pegasus/22_tcpserver/: Makefile  net_params.h
Pegasus/histreaming+tcp/: BUILD.gn  app_demo_histreaming.c  app_demo_histreaming.h
Pegasus/histreaming+tcp/tcpclient/: tcp.c  tcp.h
Pegasus/histreaming+tcp/tcpserver/: net_params.h  speaker.h  tcp_server.c  tcp_server.h
Pegasus/histreaming_client_demo/: BUILD.gn  app_demo_histreaming.c  app_demo_histreaming.h  tcp_client.c  tcp_client.h  wifi_connecter.c  wifi_connecter.h
Pegasus/iothardware/: BUILD.gn  wifi_connect_demo.c
Pegasus/message_demo/: message.c
Pegasus/mutex_demo/: mutex.c
Pegasus/output_voice_demo/: BUILD.gn  led_example.c  output_voice.c  speaker.c
Pegasus/semaphore_demo/: semp.c
Pegasus/tcp/: BUILD.gn  demo_entry_cmsis.c  speaker.c  tcp_server_test.c
Pegasus/tcpclient/: Makefile  tcp_client_test.c
Pegasus/tcpserver/: tcp.h  tcp_server_test.c
Pegasus/time_demo/: timer.c
Pegasus/wifi/: BUILD.gn  STA.c  STA.h  main.c  wifi_connect.c  wifi_connect.h
Pegasus/wifi_demo/: BUILD.gn  wifi_connect.c  wifi_sta.c
Taurus/: BUILD.gn  myapp1_main.c  myapp1_utils.h  sample_audio.c  sample_image.c  sample_switch.c  sample_wifi_connect.c
Taurus/color_smp/: smp_color_space_convert.c  smp_color_space_convert.h
Taurus/histreaming/include/: hisignalling.h
Taurus/histreaming/src/: hisignalling.c  (+1 more)
Taurus/smp/: sample_media_ai.c  sample_media_ai.h
(+3 files in other folders)
